# monkey-rust

./: Cargo.toml  README.md
interpreter/: Cargo.toml
interpreter/src/: lib.rs  repl.rs  token.rs
interpreter/src/ast/: array.rs  boolean.rs  call.rs  expression.rs  function.rs  identifier.rs  if_expression.rs  index_expression.rs  infix.rs  int.rs  mod.rs  prefix.rs  program.rs  statement.rs  string.rs
interpreter/src/evaluator/: builtins.rs  environment.rs  evaluator.rs  mod.rs  object.rs  tests.rs
interpreter/src/lexer/: lexer.rs  mod.rs  tests.rs
interpreter/src/parser/: mod.rs  parser.rs  tests.rs
src/: main.rs
