[package]
name = "monkey"
version = "0.1.0"
authors = ["Sergey Shestopalov <sergey.shestopalov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interpreter = { path = "./interpreter" }

[workspace]
members = [
    "interpreter"
]
